# python-project-template

./: .gitignore  LICENSE  pyproject.toml
.devcontainer/: devcontainer.json
