[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Chris Brown <cjbrown822@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.0"}
sqlmodel = "^0.0.22"
asyncpg = "^0.29.0"
aioodbc = "^0.5.0"
motor = "^3.6.0"
openai = "^1.51.0"
redis = "^5.1.1"
pgvector = "^0.3.4"
celery = {extras = ["auth", "librabbitmq", "msgpack", "pymemcache", "redis", "sqlalchemy", "yaml"], version = "^5.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
